Downgrade runtime to Java 8